objects/CompanyRegDemoExt__x.object
<CustomObject>
    <description>eventXL_CompanyRegDemoes</description>
    <externalDataSource>Hybrid_Data_Pipeline</externalDataSource>
    <externalName>eventXL_CompanyRegDemoes</externalName>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDCAccountID</description>
        <externalDeveloperName>SFDCAccountID</externalDeveloperName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Company Reg Demo</relationshipLabel>
        <relationshipName>Company_Reg_Demo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompanyID__c</fullName>
        <description>CompanyID</description>
        <externalDeveloperName>CompanyID</externalDeveloperName>
        <label>CompanyID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyRegDemoAnswer__c</fullName>
        <description>CompanyRegDemoAnswer</description>
        <externalDeveloperName>CompanyRegDemoAnswer</externalDeveloperName>
        <label>CompanyRegDemoAnswer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyRegDemoID__c</fullName>
        <description>CompanyRegDemoID</description>
        <externalDeveloperName>CompanyRegDemoID</externalDeveloperName>
        <label>CompanyRegDemoID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyRegDemoQuestion__c</fullName>
        <description>CompanyRegDemoQuestion</description>
        <externalDeveloperName>CompanyRegDemoQuestion</externalDeveloperName>
        <label>CompanyRegDemoQuestion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>CreatedDate</description>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <description>ExternalID</description>
        <externalDeveloperName>ExternalID</externalDeveloperName>
        <label>ExternalID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldDetailID__c</fullName>
        <description>FieldDetailID</description>
        <externalDeveloperName>FieldDetailID</externalDeveloperName>
        <label>FieldDetailID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldPickID__c</fullName>
        <description>FieldPickID</description>
        <externalDeveloperName>FieldPickID</externalDeveloperName>
        <label>FieldPickID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <description>IsActive</description>
        <externalDeveloperName>IsActive</externalDeveloperName>
        <label>IsActive</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>FieldName</description>
        <externalDeveloperName>FieldName</externalDeveloperName>
        <label>Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>CompanyRegDemoQuestion</description>
        <externalDeveloperName>CompanyRegDemoQuestion</externalDeveloperName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>LastModifiedDate</description>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDCAccountDetailsByShowID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDCAccountDetailsByShowID</description>
        <externalDeveloperName>SFDCAccountDetailsByShowID</externalDeveloperName>
        <label>SFDCAccountDetailsByShowID</label>
        <referenceTo>Account_Details_by_Show__c</referenceTo>
        <relationshipLabel>Company Reg Demo</relationshipLabel>
        <relationshipName>Company_Reg_Demo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDCShowID</description>
        <externalDeveloperName>SFDCShowID</externalDeveloperName>
        <label>Show</label>
        <referenceTo>Show__c</referenceTo>
        <relationshipLabel>Company Reg Demo (Show)</relationshipLabel>
        <relationshipName>Company_Reg_Demo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceKey__c</fullName>
        <description>SourceKey</description>
        <externalDeveloperName>SourceKey</externalDeveloperName>
        <label>SourceKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>CompanyRegDemoAnswer</description>
        <externalDeveloperName>CompanyRegDemoAnswer</externalDeveloperName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Company Reg Demo</label>
    <pluralLabel>Company Reg Demo</pluralLabel>
</CustomObject>